Invalid names display fix. LinkRow now scrolls instead of wrapping on small screns

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -96,6 +96,20 @@ a,
   padding-left: 20px;
 }
 
+.link-row {
+  overflow-x: auto;
+}
+
+.link-row .nav {
+  display: flex;
+  flex-wrap: nowrap;
+  white-space: nowrap;
+}
+
+.nav-item {
+  flex-shrink: 0;
+}
+
 .nav-link.router-link-active {
   background-color: #ccc;
   color: #000;
